--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/nodemailer": "^7.0.4",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-functions": "^7.0.0",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.4.1",
     "typescript": "^5.7.3"
   },
   "private": true
